--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jestcov": "jest --coverage",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "release": "release-it",
-	"publish": "npm publish --registry=https://registry.npmjs.org"
+    "publish": "npm publish --registry=https://registry.npmjs.org"
   },
   "husky": {
     "hooks": {
@@ -36,6 +36,7 @@
   "author": "Shawn",
   "license": "ISC",
   "devDependencies": {
+    "conventional-changelog": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -44,10 +45,10 @@
     "webpack": "^5.91.0"
   },
   "dependencies": {
-	"@rspack/cli": "^1.5.2",
-    "@rspack/core": "^1.5.2",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@rspack/cli": "^1.5.2",
+    "@rspack/core": "^1.5.2",
     "@types/express": "^4.17.3",
     "@types/glob": "^7.1.1",
     "@types/node": "^13.9.0",
