--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feflow-devkit-xbc-rspack",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "rspack编译套件",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,15 @@
   "author": "Shawn",
   "license": "ISC",
   "devDependencies": {
+	    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "conventional-changelog": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -55,6 +64,7 @@
     "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
+	"autoprefixer": "^9.4.4",
     "colors": "^1.4.0",
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "^5.1.1",
