--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feflow-devkit-xbc-rspack",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "rspack编译套件",
   "main": "index.js",
   "scripts": {
@@ -35,7 +35,7 @@
   "author": "Shawn",
   "license": "ISC",
   "devDependencies": {
-	"@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -49,22 +49,20 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.5.3",
-    "release-it": "^14.1.0",
-    "webpack": "^5.91.0"
+    "release-it": "^14.1.0"
   },
   "dependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@rspack/cli": "^1.5.2",
-    "@rspack/core": "^1.5.2",
+    "@rspack/cli": "~1.5.2",
+    "@rspack/core": "~1.5.2",
     "@types/express": "^4.17.3",
     "@types/glob": "^7.1.1",
     "@types/node": "^13.9.0",
-    "@types/webpack": "^4.41.7",
+    "autoprefixer": "^9.4.4",
     "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
-	"autoprefixer": "^9.4.4",
     "colors": "^1.4.0",
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -99,7 +97,6 @@
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^3.7.2",
