--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feflow-devkit-xbc-rspack",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "rspack编译套件",
   "main": "index.js",
   "scripts": {
@@ -54,8 +54,8 @@
   "dependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@rspack/cli": "~1.5.2",
-    "@rspack/core": "~1.5.2",
+    "@rspack/cli": "1.5.3",
+    "@rspack/core": "1.5.3",
     "@types/express": "^4.17.3",
     "@types/glob": "^7.1.1",
     "@types/node": "^13.9.0",
