--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feflow-devkit-xbc-rspack",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "rspack编译套件",
   "main": "index.js",
   "scripts": {
@@ -99,10 +99,6 @@
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-subresource-integrity": "1.5.1"
+    "webpack-merge": "^4.2.2"
   }
 }
